# madagascarfish

./: .env.example  .gitignore  .pre-commit-config.yaml  Alex-ToDo.md  CLAUDE.md  LICENSE  OPERATIONS.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  todo.md
.claude/agents/: architecture.md  ba-references.md  business-analyst.md  code-quality-reviewer.md  conservation-writer.md  product-manager.md  security-reviewer.md  test-writer.md  ux-reviewer.md
.claude/commands/: adr.md  architect.md  ba.md  code-review.md  migration.md  qa.md  reconcile.md  review.md  security-check.md  security-review.md  spec.md  story.md  test.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy-staging.yml  frontend-auth-e2e.yml  frontend-ci.yml  frontend-e2e.yml
backend/: Dockerfile
backend/accounts/: admin.py  backends.py  models.py  permissions.py  scoping.py  serializer_mixins.py  serializers.py  services.py  signals.py  urls.py  views.py
backend/audit/: admin.py  apps.py  context.py  models.py  signals.py  views.py
backend/config/: api_urls.py  celery.py  pagination.py  urls.py  views.py
backend/fieldwork/: admin.py  apps.py  models.py  serializers.py  views.py
backend/husbandry/: admin.py  apps.py  models.py  serializers.py  tests.py  translation.py  urls.py  views.py
backend/i18n/: admin.py  apps.py  email.py  models.py  serializers.py  signals.py
backend/integration/: admin.py  darwincore.py  models.py  tasks.py
backend/populations/: admin.py  apps.py  models.py  serializers.py  signals.py  views.py
backend/species/: admin.py  admin_revalidate.py  apps.py  basins.py  models.py  serializers.py  serializers_map.py  signals.py  translation.py  views.py  views_coordinator_dashboard.py  views_dashboard.py  views_dwc.py  views_genus.py  views_institution_dashboard.py  views_map.py  views_site_map_asset.py
backend/tests/: test_admin.py  test_admin_revalidate.py  test_api.py  test_api_adversarial.py  test_audit_csv_export.py  test_audit_entry.py  test_audit_signals.py  test_auth.py  test_breeding_events.py  test_breeding_recommendation_event.py  test_coordinated_program_transfer.py  test_coordinator_dashboard.py  test_cors.py  test_darwincore.py  test_field_programs.py  test_gate_06b_adversarial.py  test_gate_07_adversarial.py  test_health.py  test_institution_profile.py  test_institution_scoped_editing.py  test_institution_summary.py  test_iucn_sync.py  test_iucn_sync_audit.py  test_iucn_sync_conflict.py  test_manual_expert_admin.py  test_models.py  test_open_recommendations.py  test_reproductive_activity.py  test_reproductive_activity_adversarial.py  (+8 more)
docs/: ADMIN_GUIDE.md  CARES_REDUCED_SCOPE_PLAN.md  EAZA_EEP_ENTRY_GUIDE.md  POPULATION_DATA_GUIDE.md  WORKSHOP_DEMO_RUNBOOK.md  design.md
frontend/: .env.example  .gitignore  middleware.test.ts  middleware.ts  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  vitest.config.ts
(+321 files in other folders)
