[project]
name = "madagascar-fish"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["config", "species", "populations", "fieldwork", "accounts", "integration", "audit"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
strict = true
warn_unused_configs = true
ignore_missing_imports = true

# Django/DRF-heavy modules rely on framework classes that don't ship precise
# generic parameters in their stubs (ModelSerializer, FilterSet, ModelViewSet).
# Enforcing strict generics there produces volumes of type-arg noise without
# catching real bugs. Core business logic (integration, species.models, etc.)
# stays strict.
[[tool.mypy.overrides]]
module = [
    "accounts.admin",
    "accounts.serializers",
    "accounts.views",
    "audit.admin",
    "audit.context",
    "audit.signals",
    "config.pagination",
    "fieldwork.admin",
    "fieldwork.serializers",
    "fieldwork.views",
    "husbandry.admin",
    "husbandry.serializers",
    "husbandry.views",
    "husbandry.tests",
    "husbandry.management.*",
    "integration.admin",
    "populations.admin",
    "populations.serializers",
    "populations.views",
    "species.admin",
    "species.models",
    "species.serializers",
    "species.serializers_map",
    "species.views",
    "species.views_dashboard",
    "species.views_map",
    "species.management.*",
    "tests.*",
    "*.migrations.*",
]
disable_error_code = [
    "type-arg",
    "no-untyped-def",
    "no-untyped-call",
    "misc",
    "union-attr",
    "unused-ignore",
    "no-any-return",
    "arg-type",
    "return-value",
    "assignment",
    "attr-defined",
    "var-annotated",
    "override",
]

[tool.django-stubs]
django_settings_module = "config.settings.dev"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py"]
pythonpath = ["backend"]
addopts = "--reuse-db -q"
